chore: deps for Netlify build (tailwindcss-animate, @types/*); polish hero lead card and FAQ; minor UI tweaks

--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.0",
     "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "^24.2.1",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "postcss": "^8",
