--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.1.0",
-    "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.6",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.454.0",
     "next": "15.4.6",
     "react": "18.3.1",
